# kobuki_desktop

./: .project  CHANGELOG.rst  README.markdown  README.md  kobuki_simulator.rosinstall  stack.xml
kobuki_dashboard/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml  plugin.xml  setup.py
kobuki_dashboard/plugins/: plugin.xml
kobuki_dashboard/scripts/: kobuki_dashboard
kobuki_dashboard/src/kobuki_dashboard/: battery_widget.py  dashboard.py  led_widget.py  motor_widget.py
kobuki_desktop/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_factory_test/: .cproject  manifest.xml
kobuki_factory_test/include/kobuki_factory_test/: main_window.hpp  qnode.hpp  robots.hpp
kobuki_factory_test/resources/launch/: start.launch
kobuki_factory_test/src/: main_window.cpp  qnode.cpp
kobuki_factory_test/ui/: main_window.ui
kobuki_gazebo/: .cproject  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
kobuki_gazebo/launch/: empty_world.launch  kobuki_empty_world.launch  kobuki_playground.launch  kobukibot_kinect_empty_world.launch  kobukibot_xtion_empty_world.launch  robot.launch  robot.xml  view_robot_gazebo.launch
kobuki_gazebo/launch/apps/: safe_random_walker_app.launch
kobuki_gazebo/launch/includes/: robot.launch.xml
kobuki_gazebo_plugins/: .cproject  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
kobuki_gazebo_plugins/include/kobuki_gazebo_plugins/: gazebo_ros_kobuki.h
kobuki_gazebo_plugins/src/: gazebo_ros_kobuki.cpp  gazebo_ros_kobuki_loader.cpp  gazebo_ros_kobuki_loads.cpp  gazebo_ros_kobuki_updates.cpp
kobuki_qtestsuite/: CHANGELOG.rst  CMakeLists.txt  Makefile  dude.py  manifest.xml  package.xml  setup.py
kobuki_qtestsuite/plugins/: testsuite_plugin.xml
kobuki_qtestsuite/scripts/: kobuki_qtestsuite
kobuki_qtestsuite/src/kobuki_qtestsuite/: battery_profile_frame.py  bump_frame.py  cliff_sensor_frame.py  climbing_frame.py  configuration_dock_widget.py  foo.py  full_size_data_plot.py  gyro_drift_frame.py  kobuki_testsuite.py  kobuki_testsuite_widget.py  life_frame.py  payload_frame.py  testsuite.py  testsuite_widget.py  wandering_frame.py
kobuki_qtestsuite/src/kobuki_qtestsuite/resources/: text.qrc  wandering.qrc
kobuki_qtestsuite/src/kobuki_qtestsuite/resources/text/: battery_profile.html  bump.html  cliff_sensor.html  climbing.html  gyro_drift.html  life.html  payload.html  wandering.html
kobuki_qtestsuite/src/kobuki_qtestsuite/ui/: battery_profile.ui  battery_profile_frame.ui  bump_frame.ui  cliff_sensor_frame.ui  climbing_frame.ui  configuration_dock.ui  gyro_drift_frame.ui  kobuki_testsuite.ui  life_frame.ui  payload_frame.ui  testsuite.ui  wandering_frame.ui
kobuki_rviz_launchers/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_rviz_launchers/launch/: view_robot.launch
kobuki_usb_tools/: CMakeLists.txt  mainpage.dox  manifest.xml
kobuki_usb_tools/src/: find_devices.cpp  flasher.cpp  get_serial_number.cpp  reset_device.cpp
