<package>
  <name>kobuki_gazebo</name>
  <version>0.2.0</version>
  <description>Kobuki simulation for Gazebo</description>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/kobuki_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- launch file dependencies -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
</package>
