<?xml version="1.0"?>
<package>
  <name>kobuki_rviz_launchers</name>
  <version>0.5.7</version>
  <description>The kobuki_rviz_launchers package</description>
  <author>Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki_desktop/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki_desktop</url>
  <url type="website">http://ros.org/wiki/kobuki_rviz_launchers</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rviz</run_depend>
</package>
